--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "test1",
+  "name": "Alfresco NodeJS",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -12,7 +12,7 @@
     "dev": "concurrently \"npm run serve\" \"npm run watch:js\""
   },
   "keywords": [],
-  "author": "",
+  "author": "Dave Draper",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.15.3",
@@ -20,13 +20,11 @@
     "express": "^4.14.0",
     "express-session": "^1.14.2",
     "flash": "^1.1.0",
-    "jade": "^1.11.0",
     "morgan": "^1.7.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "pug": "^2.0.0-beta6",
-    "querystring": "^0.2.0",
-    "stylus": "^0.54.5"
+    "querystring": "^0.2.0"
   },
   "devDependencies": {
     "babel-core": "^6.21.0",
@@ -38,8 +36,6 @@
     "browserify-hmr": "^0.3.5",
     "concurrently": "^3.1.0",
     "nodemon": "^1.11.0",
-    "vue-hot-reload-api": "^2.0.6",
-    "vueify": "^9.2.4",
     "watchify": "^3.8.0"
   }
 }
