--- a/package.json
+++ b/package.json
@@ -1,41 +1,20 @@
 {
-  "name": "Alfresco NodeJS",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "start": "node server.js",
-    "serve": "nodemon server.js",
-    "prestart": "npm run build:js",
-    "build:js": "browserify",
-    "watch:js": "watchify src/app.js -t vueify -t babelify -p browserify-hmr -p [ vueify/plugins/extract-css -o public/styles.bundle.css ] -o public/app.bundle.js",
-    "dev": "concurrently \"npm run serve\" \"npm run watch:js\""
-  },
-  "keywords": [],
-  "author": "Dave Draper",
-  "license": "ISC",
-  "dependencies": {
-    "axios": "^0.15.3",
+  "devDependencies": {
+    "babel-core": "^6.21.0",
+    "babel-loader": "^6.2.10",
+    "babel-preset-es2015": "^6.18.0",
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "express-session": "^1.14.2",
     "flash": "^1.1.0",
+    "http": "^0.0.0",
+    "moment": "^2.17.1",
     "morgan": "^1.7.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "pug": "^2.0.0-beta6",
-    "querystring": "^0.2.0"
-  },
-  "devDependencies": {
-    "babel-core": "^6.21.0",
-    "babel-plugin-transform-runtime": "^6.15.0",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-runtime": "^6.20.0",
-    "babelify": "^7.3.0",
-    "browserify": "^13.1.1",
-    "browserify-hmr": "^0.3.5",
-    "concurrently": "^3.1.0",
-    "nodemon": "^1.11.0",
-    "watchify": "^3.8.0"
+    "webpack": "2.2.0-rc.1",
+    "webpack-dev-middleware": "^1.9.0",
+    "webpack-dev-server": "2.2.0-rc.0"
   }
 }
