--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "pug": "^2.0.0-beta6",
+    "vue": "^2.1.6",
     "webpack": "2.2.0-rc.1",
     "webpack-dev-middleware": "^1.9.0",
     "webpack-dev-server": "2.2.0-rc.0"
