--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.18.0",
     "body-parser": "^1.15.2",
+    "css-loader": "^0.26.1",
     "express": "^4.14.0",
     "express-session": "^1.14.2",
+    "file-loader": "^0.9.0",
     "flash": "^1.1.0",
     "http": "^0.0.0",
     "moment": "^2.17.1",
@@ -15,6 +17,8 @@
     "passport-local": "^1.0.0",
     "pug": "^2.0.0-beta6",
     "vue": "^2.1.6",
+    "vue-loader": "^10.0.2",
+    "vue-template-compiler": "^2.1.6",
     "webpack": "2.2.0-rc.1",
     "webpack-dev-middleware": "^1.9.0",
     "webpack-dev-server": "2.2.0-rc.0"
