--- a/package.json
+++ b/package.json
@@ -6,6 +6,11 @@
     "babel-preset-es2015": "^6.18.0",
     "body-parser": "^1.15.2",
     "css-loader": "^0.26.1",
+    "eslint": "^3.12.2",
+    "eslint-config-standard": "^6.2.1",
+    "eslint-plugin-html": "^1.7.0",
+    "eslint-plugin-promise": "^3.4.0",
+    "eslint-plugin-standard": "^2.0.1",
     "express": "^4.14.0",
     "express-session": "^1.14.2",
     "file-loader": "^0.9.0",
