Got initial tests running (need to get src alias working)

--- a/.jshintrc
+++ b/.jshintrc
@@ -27,6 +27,7 @@
    "unused": true,
 
    "globals": {
+      "__dirname": false,
       "console": false,
       "process": false,
       "module": false,
