--- a/package.json
+++ b/package.json
@@ -1,10 +1,19 @@
 {
+  "scripts": {
+    "dev": "node server.js",
+    "build": "node build/build.js",
+    "unit": "karma start test/unit/karma.conf.js --single-run",
+    "e2e": "node test/e2e/runner.js",
+    "test": "{{#unit}}npm run unit{{/unit}}{{#unit}}{{#e2e}} && {{/e2e}}{{/unit}}{{#e2e}}npm run e2e{{/e2e}}",
+    "lint": "eslint --ext .js,.vue src{{#unit}} test/unit/specs{{/unit}}{{#e2e}} test/e2e/specs{{/e2e}}"
+  },
   "devDependencies": {
     "axios": "^0.15.3",
     "babel-core": "^6.21.0",
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.18.0",
     "body-parser": "^1.15.2",
+    "chai": "^3.5.0",
     "css-loader": "^0.26.1",
     "eslint": "^3.12.2",
     "eslint-config-standard": "^6.2.1",
@@ -15,17 +24,32 @@
     "express-session": "^1.14.2",
     "file-loader": "^0.9.0",
     "flash": "^1.1.0",
+    "function-bind": "^1.1.0",
     "http": "^0.0.0",
+    "jasmine-core": "^2.5.2",
+    "karma": "^1.3.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-coverage": "^1.1.1",
+    "karma-jasmine": "^1.1.0",
+    "karma-mocha": "^1.3.0",
+    "karma-phantomjs-launcher": "^1.0.2",
+    "karma-sinon-chai": "^1.2.4",
+    "karma-spec-reporter": "^0.0.26",
+    "karma-webpack": "^1.8.1",
+    "mocha": "^3.2.0",
     "moment": "^2.17.1",
     "morgan": "^1.7.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "pug": "^2.0.0-beta6",
+    "sinon": "^1.17.6",
+    "sinon-chai": "^2.8.0",
     "vue": "^2.1.6",
     "vue-loader": "^10.0.2",
     "vue-template-compiler": "^2.1.6",
     "webpack": "2.2.0-rc.1",
     "webpack-dev-middleware": "^1.9.0",
-    "webpack-dev-server": "2.2.0-rc.0"
+    "webpack-dev-server": "2.2.0-rc.0",
+    "webpack-merge": "^2.0.0"
   }
 }
