--- a/package.json
+++ b/package.json
@@ -1,11 +1,7 @@
 {
   "scripts": {
     "dev": "node server.js",
-    "build": "node build/build.js",
-    "unit": "karma start test/unit/karma.conf.js --single-run",
-    "e2e": "node test/e2e/runner.js",
-    "test": "{{#unit}}npm run unit{{/unit}}{{#unit}}{{#e2e}} && {{/e2e}}{{/unit}}{{#e2e}}npm run e2e{{/e2e}}",
-    "lint": "eslint --ext .js,.vue src{{#unit}} test/unit/specs{{/unit}}{{#e2e}} test/e2e/specs{{/e2e}}"
+    "unit": "karma start test/unit/karma.conf.js --single-run"
   },
   "devDependencies": {
     "axios": "^0.15.3",
@@ -26,7 +22,9 @@
     "flash": "^1.1.0",
     "function-bind": "^1.1.0",
     "http": "^0.0.0",
+    "inject-loader": "^3.0.0-beta2",
     "jasmine-core": "^2.5.2",
+    "json-loader": "^0.5.4",
     "karma": "^1.3.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-coverage": "^1.1.1",
@@ -34,6 +32,7 @@
     "karma-mocha": "^1.3.0",
     "karma-phantomjs-launcher": "^1.0.2",
     "karma-sinon-chai": "^1.2.4",
+    "karma-sourcemap-loader": "^0.3.7",
     "karma-spec-reporter": "^0.0.26",
     "karma-webpack": "^1.8.1",
     "mocha": "^3.2.0",
@@ -41,6 +40,7 @@
     "morgan": "^1.7.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
+    "phantomjs-prebuilt": "^2.1.14",
     "pug": "^2.0.0-beta6",
     "sinon": "^1.17.6",
     "sinon-chai": "^2.8.0",
